bpy api - assigning to object.matrix_basis with AXIS_ANGLE rotation mode does not work correctly #46263

Closed
opened 2015-09-25 08:22:00 +02:00 by Gyro Gearloose · 5 comments

Blender Version
Broken: (example: 2.75a, 2.76rc1)

Short description of error
Assignment to object.matrix_basis seems to work incorrectly for rotation mode AXIS_ANGLE

Exact steps for others to reproduce the error
Choose demo.py in parent_inverse_test.blend
Run Script
Rotation of child changes - not supposed to happen
The script applies parent_inverse to child's local matrix and clears it afterward.

Revert File
Change Rotation Mode to any other mode
Run demo.py
Rotation of child does not change

anm_script.py uses a workaround by assigning to the properties location, rotation_axis_angle and scale individually

**Blender Version** Broken: (example: 2.75a, 2.76rc1) **Short description of error** Assignment to object.matrix_basis seems to work incorrectly for rotation mode `AXIS_ANGLE` **Exact steps for others to reproduce the error** Choose demo.py in [parent_inverse_test.blend](https://archive.blender.org/developer/F238859/parent_inverse_test.blend) Run Script Rotation of child changes - not supposed to happen The script applies parent_inverse to child's local matrix and clears it afterward. Revert File Change Rotation Mode to any other mode Run demo.py Rotation of child does not change anm_script.py uses a workaround by assigning to the properties location, rotation_axis_angle and scale individually
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @pink.vertex

Added subscriber: @pink.vertex
Bastien Montagne self-assigned this 2015-09-25 09:03:21 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by blender/blender@7967da2515

This issue was referenced by blender/blender@7967da2515e6ffd49d925dffa430e2d50e978bac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#46263
No description provided.