Fix T46263: bpy api - assigning to object.matrix_basis with AXIS_ANGLE rotation mode does not work correctly.

Drot in axis angle does not make that much sense anyway (it's even disabled in UI), but let's apply
it correctly at least!